# basewebapi

./: .gitignore  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: test.yml
basewebapi/: __init__.py  basewebapi.py  json_objects.py
basewebapi/asyncbaseweb/: abasewebapi.py
docs/source/: class.rst  conf.py  index.rst  installation.rst  usage.rst
examples/: async_pokeapi.py  pokeapi.py
src/basewebapi/: __init__.py  basewebapi.py  json_objects.py
src/basewebapi/asyncbasewebapi/: __init__.py  abasewebapi.py
test/: test_abasewebapi.py  test_basewebapi.py  test_json_objects.py
